--- a/fooocus_colab.ipynb
+++ b/fooocus_colab.ipynb
@@ -12,6 +12,18 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ],
+      "metadata": {
+        "id": "G_LI8u0J1go7"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
       "metadata": {
         "id": "VjYy0F2gZIPR"
@@ -22,8 +34,41 @@
         "%cd /content\n",
         "!git clone https://github.com/lllyasviel/Fooocus.git\n",
         "%cd /content/Fooocus\n",
-        "!python entry_with_update.py --share --always-high-vram --preset realistic\n"
+        "\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!wget -O /content/Fooocus/models/loras/put_loras_here https://civitai.green/models/667086/nsfw-master-flux"
+      ],
+      "metadata": {
+        "id": "oFO-2t8G1rBe"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!wget -O /content/Fooocus/models/checkpoints/put_checkpoints_here https://civitai.green/models/352159/nsfw"
+      ],
+      "metadata": {
+        "id": "bTTtPcWU1sUz"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!python entry_with_update.py --share --always-high-vram --preset realistic"
+      ],
+      "metadata": {
+        "id": "yIGFqt1t1kIE"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
