--- a/fooocus_colab.ipynb
+++ b/fooocus_colab.ipynb
@@ -13,22 +13,80 @@
     {
       "cell_type": "code",
       "source": [
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive')"
+        "gpu_info = !nvidia-smi\n",
+        "gpu_info = '\\n'.join(gpu_info)\n",
+        "if gpu_info.find('failed') >= 0:\n",
+        "  print('Not connected to a GPU')\n",
+        "else:\n",
+        "  print(gpu_info)"
       ],
       "metadata": {
-        "id": "G_LI8u0J1go7"
+        "id": "WuNm6229cGqh"
       },
       "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ],
       "metadata": {
-        "id": "VjYy0F2gZIPR"
+        "id": "G_LI8u0J1go7",
+        "outputId": "a899dca8-b1cb-40ca-8e4d-e30a760d64ed",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mounted at /content/drive\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 5,
+      "metadata": {
+        "id": "VjYy0F2gZIPR",
+        "outputId": "89dce829-f0f5-41ce-a454-488d2efa627e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Collecting pygit2==1.15.1\n",
+            "  Downloading pygit2-1.15.1-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (3.3 kB)\n",
+            "Requirement already satisfied: cffi>=1.16.0 in /usr/local/lib/python3.11/dist-packages (from pygit2==1.15.1) (1.17.1)\n",
+            "Requirement already satisfied: pycparser in /usr/local/lib/python3.11/dist-packages (from cffi>=1.16.0->pygit2==1.15.1) (2.22)\n",
+            "Downloading pygit2-1.15.1-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (5.1 MB)\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m5.1/5.1 MB\u001b[0m \u001b[31m25.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hInstalling collected packages: pygit2\n",
+            "  Attempting uninstall: pygit2\n",
+            "    Found existing installation: pygit2 1.17.0\n",
+            "    Uninstalling pygit2-1.17.0:\n",
+            "      Successfully uninstalled pygit2-1.17.0\n",
+            "Successfully installed pygit2-1.15.1\n",
+            "/content\n",
+            "Cloning into 'Fooocus'...\n",
+            "remote: Enumerating objects: 6725, done.\u001b[K\n",
+            "remote: Total 6725 (delta 0), reused 0 (delta 0), pack-reused 6725 (from 1)\u001b[K\n",
+            "Receiving objects: 100% (6725/6725), 33.35 MiB | 21.19 MiB/s, done.\n",
+            "Resolving deltas: 100% (3839/3839), done.\n",
+            "/content/Fooocus\n"
+          ]
+        }
+      ],
       "source": [
         "!pip install pygit2==1.15.1\n",
         "%cd /content\n",
@@ -43,10 +101,32 @@
         "!wget -O /content/Fooocus/models/loras/put_loras_here https://civitai.green/models/667086/nsfw-master-flux"
       ],
       "metadata": {
-        "id": "oFO-2t8G1rBe"
+        "id": "oFO-2t8G1rBe",
+        "outputId": "f66bb0ec-e03d-4b03-f3fc-cc37af12274a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "--2025-03-18 17:59:00--  https://civitai.green/models/667086/nsfw-master-flux\n",
+            "Resolving civitai.green (civitai.green)... 104.21.82.166, 172.67.159.210, 2606:4700:3036::6815:52a6, ...\n",
+            "Connecting to civitai.green (civitai.green)|104.21.82.166|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: unspecified [text/html]\n",
+            "Saving to: ‘/content/Fooocus/models/loras/put_loras_here’\n",
+            "\n",
+            "/content/Fooocus/mo     [  <=>               ] 210.81K   894KB/s    in 0.2s    \n",
+            "\n",
+            "2025-03-18 17:59:01 (894 KB/s) - ‘/content/Fooocus/models/loras/put_loras_here’ saved [215870]\n",
+            "\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -54,10 +134,32 @@
         "!wget -O /content/Fooocus/models/checkpoints/put_checkpoints_here https://civitai.green/models/352159/nsfw"
       ],
       "metadata": {
-        "id": "bTTtPcWU1sUz"
+        "id": "bTTtPcWU1sUz",
+        "outputId": "5ed37c1f-d857-4b20-91cf-04d679f1aba8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "--2025-03-18 17:59:03--  https://civitai.green/models/352159/nsfw\n",
+            "Resolving civitai.green (civitai.green)... 104.21.82.166, 172.67.159.210, 2606:4700:3036::6815:52a6, ...\n",
+            "Connecting to civitai.green (civitai.green)|104.21.82.166|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: unspecified [text/html]\n",
+            "Saving to: ‘/content/Fooocus/models/checkpoints/put_checkpoints_here’\n",
+            "\n",
+            "/content/Fooocus/mo     [ <=>                ] 193.46K  1.01MB/s    in 0.2s    \n",
+            "\n",
+            "2025-03-18 17:59:04 (1.01 MB/s) - ‘/content/Fooocus/models/checkpoints/put_checkpoints_here’ saved [198102]\n",
+            "\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -65,10 +167,73 @@
         "!python entry_with_update.py --share --always-high-vram --preset realistic"
       ],
       "metadata": {
-        "id": "yIGFqt1t1kIE"
+        "id": "yIGFqt1t1kIE",
+        "outputId": "c8e0e83d-ce15-44ca-e28b-9f651766c40c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Already up-to-date\n",
+            "Update succeeded.\n",
+            "[System ARGV] ['entry_with_update.py', '--share', '--always-high-vram', '--preset', 'realistic']\n",
+            "Python 3.11.11 (main, Dec  4 2024, 08:55:07) [GCC 11.4.0]\n",
+            "Fooocus version: 2.5.5\n",
+            "Error checking version for torchsde: No package metadata was found for torchsde\n",
+            "Installing requirements\n",
+            "Loaded preset: /content/Fooocus/presets/realistic.json\n",
+            "[Cleanup] Attempting to delete content of temp dir /tmp/fooocus\n",
+            "[Cleanup] Cleanup successful\n",
+            "Downloading: \"https://huggingface.co/lllyasviel/misc/resolve/main/xlvaeapp.pth\" to /content/Fooocus/models/vae_approx/xlvaeapp.pth\n",
+            "\n",
+            "100% 209k/209k [00:00<00:00, 2.11MB/s]\n",
+            "Downloading: \"https://huggingface.co/lllyasviel/misc/resolve/main/vaeapp_sd15.pt\" to /content/Fooocus/models/vae_approx/vaeapp_sd15.pth\n",
+            "\n",
+            "100% 209k/209k [00:00<00:00, 2.15MB/s]\n",
+            "Downloading: \"https://huggingface.co/mashb1t/misc/resolve/main/xl-to-v1_interposer-v4.0.safetensors\" to /content/Fooocus/models/vae_approx/xl-to-v1_interposer-v4.0.safetensors\n",
+            "\n",
+            "100% 5.40M/5.40M [00:00<00:00, 62.2MB/s]\n",
+            "Downloading: \"https://huggingface.co/lllyasviel/misc/resolve/main/fooocus_expansion.bin\" to /content/Fooocus/models/prompt_expansion/fooocus_expansion/pytorch_model.bin\n",
+            "\n",
+            "100% 335M/335M [00:02<00:00, 118MB/s]\n",
+            "Downloading: \"https://huggingface.co/lllyasviel/fav_models/resolve/main/fav/realisticStockPhoto_v20.safetensors\" to /content/Fooocus/models/checkpoints/realisticStockPhoto_v20.safetensors\n",
+            "\n",
+            "100% 6.46G/6.46G [01:04<00:00, 108MB/s]\n",
+            "Downloading: \"https://huggingface.co/mashb1t/fav_models/resolve/main/fav/SDXL_FILM_PHOTOGRAPHY_STYLE_V1.safetensors\" to /content/Fooocus/models/loras/SDXL_FILM_PHOTOGRAPHY_STYLE_V1.safetensors\n",
+            "\n",
+            "100% 870M/870M [00:05<00:00, 173MB/s]\n",
+            "Traceback (most recent call last):\n",
+            "  File \"/content/Fooocus/entry_with_update.py\", line 46, in <module>\n",
+            "    from launch import *\n",
+            "  File \"/content/Fooocus/launch.py\", line 152, in <module>\n",
+            "    from webui import *\n",
+            "  File \"/content/Fooocus/webui.py\", line 10, in <module>\n",
+            "    import modules.async_worker as worker\n",
+            "  File \"/content/Fooocus/modules/async_worker.py\", line 3, in <module>\n",
+            "    from extras.inpaint_mask import generate_mask_from_image, SAMOptions\n",
+            "  File \"/content/Fooocus/extras/inpaint_mask.py\", line 6, in <module>\n",
+            "    from extras.GroundingDINO.util.inference import default_groundingdino\n",
+            "  File \"/content/Fooocus/extras/GroundingDINO/util/inference.py\", line 3, in <module>\n",
+            "    import ldm_patched.modules.model_management as model_management\n",
+            "  File \"/content/Fooocus/ldm_patched/modules/model_management.py\", line 121, in <module>\n",
+            "    total_vram = get_total_memory(get_torch_device()) / (1024 * 1024)\n",
+            "                                  ^^^^^^^^^^^^^^^^^^\n",
+            "  File \"/content/Fooocus/ldm_patched/modules/model_management.py\", line 90, in get_torch_device\n",
+            "    return torch.device(torch.cuda.current_device())\n",
+            "                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+            "  File \"/usr/local/lib/python3.11/dist-packages/torch/cuda/__init__.py\", line 971, in current_device\n",
+            "    _lazy_init()\n",
+            "  File \"/usr/local/lib/python3.11/dist-packages/torch/cuda/__init__.py\", line 319, in _lazy_init\n",
+            "    torch._C._cuda_init()\n",
+            "RuntimeError: Found no NVIDIA driver on your system. Please check that you have an NVIDIA GPU and installed a driver from http://www.nvidia.com/Download/index.aspx\n"
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
